# platform.core.api.sensor

./: AUTHORS  CMakeLists.txt  LICENSE.APLv2  capi-system-sensor.pc.in  capi-system-sensor.spec  project.config
debian/: changelog  control  rules
doc/: sensor_doc.h
include/: sensor.h  sensor_log.h  sensor_private.h  sensor_recorder.h  sensor_types_internal.h  sensors.h
packaging/: capi-system-sensor.spec
sensorctl/: CMakeLists.txt
sensorctl/src/: sensor_log.h  sensor_types.h  sensorctl.cpp
sensorctl/src/info/: info_manager.cpp  info_manager.h
sensorctl/src/injector/: dbus_injector.cpp  dbus_injector.h  injector.h  injector_manager.cpp  injector_manager.h
sensorctl/src/tester/: sensor_tester.cpp  sensor_tester.h  tester.h  tester_manager.cpp  tester_manager.h
src/: fusion_util.c  geomagnetic_field.c  geomanetic_field.c  geomanetic_field.cpp  sensor.c  sensor.cpp  sensor_recorder.cpp  sensor_recorder_dummy.cpp
test/: CMakeLists.txt  accelerometer-gravity-with-linear-acceleration.c  gyroscope-calc-anger.c  rotation.c  sensor_recorder_test.cpp  supported-sensor.c  system-sensor.c
